--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,13 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dimlight — Creative Studio (Thrive-style theme)</title>
 
-  <!-- Google font (optional) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- HEADER -->
   <header>
     <div class="wrap header-inner">
       <div class="brand" role="banner">
@@ -34,36 +31,29 @@
   </header>
 
   <main class="wrap">
-    <!-- HOME pane (videos removed) -->
     <section id="home-pane" class="tab-pane active" aria-labelledby="home">
       <div class="hero-grid">
-        <!-- left column: heading + controls -->
         <div>
           <div class="hero">
             <h2>We help <span style="color:#000">good businesses</span> become <span style="color:var(--accent-2)">GREAT.</span></h2>
             <p>Creative films, thumb-stopping reels, and campaigns built to grow revenue. We focus on measurable growth — views, leads and sales.</p>
           </div>
 
-          <!-- hero-controls align buttons with image (image is in right grid column) -->
           <div class="hero-controls" aria-hidden="false">
             <div class="left">
               <button class="btn-primary" data-action="open-contact">Start a project →</button>
               <button class="btn-secondary" data-action="open-services">Explore services</button>
             </div>
-            <!-- small CTA note or awards badge could go here if needed -->
             <div style="font-size:14px;color:var(--muted)">Trusted by brands & storytellers</div>
           </div>
 
-          <!-- Feature cards now appear below (separate row) -->
-        </div>
+          </div>
 
-        <!-- right column: image -->
         <div class="hero-media" aria-hidden="false">
           <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?auto=format&fit=crop&w=1400&q=60" alt="Hero visual">
         </div>
       </div>
 
-      <!-- Feature cards appear beneath hero -->
       <div class="center" style="margin-top:36px">
         <h3 class="section-heading">Our Core Strengths 💡</h3>
       </div>
@@ -87,7 +77,6 @@
         </div>
       </div>
 
-      <!-- Why / Stats -->
       <section style="padding-top:36px;padding-bottom:36px">
         <div class="center">
           <h3 class="section-heading">Why Brands Choose Dimlight ✨</h3>
@@ -102,13 +91,11 @@
         </div>
       </section>
 
-      <!-- About summary -->
       <section class="center" style="padding-top:24px;padding-bottom:24px">
         <h3 class="section-heading">About Dimlight</h3>
         <p style="margin-top:12px; max-width:780px; margin-left:auto; margin-right:auto">Founded by <strong>Ram Sardhar</strong> in Hyderabad, Dimlight is a creative studio combining cinematic storytelling with digital growth expertise. From short films to branded campaigns, our focus is always on emotion, craft and measurable impact.</p>
       </section>
 
-      <!-- Testimonials marquee -->
       <section style="padding-top:18px;padding-bottom:18px">
         <h3 class="section-heading left" style="margin-bottom:12px">What Our Clients Say</h3>
         <div class="marquee" id="marqueeWrap">
@@ -117,7 +104,6 @@
             <div class="quote">“Director-led craft with measurable growth outcomes. Rare combination.” — Head of Growth</div>
             <div class="quote">“Beautiful visuals, excellent sound design and on-time delivery.” — Creative Lead</div>
             <div class="quote">“They scaled our content engine and kept brand quality intact.” — Founder, D2C</div>
-            <!-- duplicate for smooth scroll -->
             <div class="quote">“Dimlight delivered a film that changed how our customers see the brand.” — CMO, Retail</div>
             <div class="quote">“Director-led craft with measurable growth outcomes. Rare combination.” — Head of Growth</div>
             <div class="quote">“Beautiful visuals, excellent sound design and on-time delivery.” — Creative Lead</div>
@@ -126,7 +112,6 @@
         </div>
       </section>
 
-      <!-- Awards -->
       <section style="padding-top:18px;padding-bottom:18px">
         <div class="center">
           <h3 class="section-heading">Awards & Recognitions 🏆</h3>
@@ -135,12 +120,11 @@
 
         <div style="display:grid; grid-template-columns:repeat(3,1fr); gap:18px; margin-top:20px">
           <div class="stat-card"><img src="https://via.placeholder.com/300x140?text=Award+1" alt=""><div style="margin-top:10px;font-weight:700">Best Short Film 2023</div><p style="margin-top:6px;color:var(--muted)">Honoured at National Film Festival for storytelling excellence.</p></div>
-          <div class="stat-card"><img src="https://via.placeholder.com/300x140?text=Award+2" alt=""><div style="margin-top:10px;font-weight:700">Creative Excellence 2022</div><p style="margin-top:6px;color:var(--muted)">Recognised for innovation in branded campaigns.</p></div>
-          <div class="stat-card"><img src="https://via.placeholder.com/300x140?text=Award+3" alt=""><div style="margin-top:10px;font-weight:700">Emerging Filmmaker</div><p style="margin-top:6px;color:var(--muted)">Celebrated for creative direction and impact.</p></div>
+          <div class="stat-card"><img src="https://via.placeholder.com/600x360?text=Case+2" alt=""><div style="font-weight:700; margin-top:10px">Creative Excellence 2022</div><p style="margin-top:6px;color:var(--muted)">Recognised for innovation in branded campaigns.</p></div>
+          <div class="stat-card"><img src="https://via.placeholder.com/600x360?text=Case+3" alt=""><div style="font-weight:700; margin-top:10px">Emerging Filmmaker</div><p style="margin-top:6px;color:var(--muted)">Celebrated for creative direction and impact.</p></div>
         </div>
       </section>
 
-      <!-- How We Grow -->
       <section style="padding-top:18px;padding-bottom:18px">
         <div class="center">
           <h3 class="section-heading">How We Grow Your Revenue 💹</h3>
@@ -154,19 +138,17 @@
         </div>
       </section>
 
-      <!-- FAQ -->
       <section style="padding-top:18px;padding-bottom:18px">
         <div class="center"><h3 class="section-heading">Frequently Asked Questions ❓</h3></div>
         <div style="max-width:900px; margin:20px auto; display:grid; gap:12px">
           <details><summary>How long does a project take?</summary><div style="margin-top:8px;color:var(--muted)">Short reels: 3–7 days. Corporate films: 2–4 weeks depending on scope.</div></details>
           <details><summary>Do you publish on socials?</summary><div style="margin-top:8px;color:var(--muted)">Yes — we deliver platform-ready assets or publish & optimise for you.</div></details>
           <details><summary>What's the typical budget?</summary><div style="margin-top:8px;color:var(--muted)">Starter reels begin at ₹15,000; full campaigns are quoted custom.</div></details>
-          <details><summary>Do you offer revisions?</summary><div style="margin-top:8px;color:var(--muted)">Yes — every package includes revision cycles for client feedback.</div></details>
+          <details><summary>Do you offer revisions?</summary><div style="margin-top:8px;color:var(--muted)">Yes — every package includes revision cycles for client feedback.</div></p></div>
         </div>
       </section>
     </section>
 
-    <!-- SERVICES pane -->
     <section id="services-pane" class="tab-pane" aria-labelledby="services">
       <div class="center">
         <h3 class="section-heading">Our Services</h3>
@@ -193,7 +175,6 @@
 </div></div>
     </section>
 
-    <!-- PORTFOLIO pane (videos live only here) -->
     <section id="portfolio-pane" class="tab-pane" aria-labelledby="portfolio">
       <h1> Our Works</h1>
       <div class="section">
@@ -202,189 +183,33 @@
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
           ">
-          <a class="thumb" href="https://www.youtube.com/watch?v=0Lj4ysomn0M" target="_blank" style="
-              height: 220px;
-              background: url('https://img.youtube.com/vi/0Lj4ysomn0M/maxresdefault.jpg')
-                center/cover no-repeat;
-              border-radius: 14px;
-              position: relative;
-              display: flex;
-              align-items: flex-end;
-              padding: 10px;
-              color: white;
-              text-decoration: none;
-              overflow: hidden;
-            ">
-            <div style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(0, 0, 0, 0.3);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              ">
-              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-            </div>
-            <h4 style="z-index: 1;">On the way | Short Film | Madhu | Ram Sardhar</h4>
-          </a>
+          <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/0Lj4ysomn0M?enablejsapi=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
-          <a class="thumb" href="https://www.youtube.com/watch?v=ouDX363DKFg" target="_blank" style="
-              height: 220px;
-              background: url('https://img.youtube.com/vi/ouDX363DKFg/maxresdefault.jpg')
-                center/cover no-repeat;
-              border-radius: 14px;
-              position: relative;
-              display: flex;
-              align-items: flex-end;
-              padding: 10px;
-              color: white;
-              text-decoration: none;
-              overflow: hidden;
-            ">
-            <div style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(0, 0, 0, 0.3);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              ">
-              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-            </div>
-            <h4 style="z-index: 1;">
-              In the race for trust, Ethika is always in pole position.
-              #DriveWithEthika F1XEthika
-            </h4>
-          </a>
+          <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/ouDX363DKFg?enablejsapi=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
-          <a class="thumb" href="https://www.youtube.com/watch?v=r8tRxU-wW5s" target="_blank" style="
-              height: 220px;
-              background: url('https://img.youtube.com/vi/r8tRxU-wW5s/maxresdefault.jpg')
-                center/cover no-repeat;
-              border-radius: 14px;
-              position: relative;
-              display: flex;
-              align-items: flex-end;
-              padding: 10px;
-              color: white;
-              text-decoration: none;
-              overflow: hidden;
-            ">
-            <div style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(0, 0, 0, 0.3);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              ">
-              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-            </div>
-            <h4 style="z-index: 1;">Instant Millet Breakfast | AD film by Ram sardhar</h4>
-          </a>
+          <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/r8tRxU-wW5s?enablejsapi=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
-          <a class="thumb" href="https://www.youtube.com/watch?v=NSq2s2-yvFM" target="_blank" style="
-              height: 220px;
-              background: url('https://img.youtube.com/vi/NSq2s2-yvFM/maxresdefault.jpg')
-                center/cover no-repeat;
-              border-radius: 14px;
-              position: relative;
-              display: flex;
-              align-items: flex-end;
-              padding: 10px;
-              color: white;
-              text-decoration: none;
-              overflow: hidden;
-            ">
-            <div style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(0, 0, 0, 0.3);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              ">
-              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-            </div>
-            <h4 style="z-index: 1;">
-              Employee Wellness Health Camp | SID’s Farm | Hyderabad
-            </h4>
-          </a>
+          <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/NSq2s2-yvFM?enablejsapi=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
-          <a class="thumb" href="https://www.youtube.com/watch?v=p_FVQvhmIzQ" target="_blank" style="
-              height: 220px;
-              background: url('https://img.youtube.com/vi/p_FVQvhmIzQ/maxresdefault.jpg')
-                center/cover no-repeat;
-              border-radius: 14px;
-              position: relative;
-              display: flex;
-              align-items: flex-end;
-              padding: 10px;
-              color: white;
-              text-decoration: none;
-              overflow: hidden;
-            ">
-            <div style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(0, 0, 0, 0.3);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              ">
-              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-            </div>
-            <h4 style="z-index: 1;">BE IN THE MOMENT | Award winning Shortfilm | By Ram sardhaR</h4>
-          </a>
+          <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/p_FVQvhmIzQ?enablejsapi=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
-          <a class="thumb" href="https://www.youtube.com/watch?v=vP71vc-ZdrI" target="_blank" style="
-              height: 220px;
-              background: url('https://img.youtube.com/vi/vP71vc-ZdrI/maxresdefault.jpg')
-                center/cover no-repeat;
-              border-radius: 14px;
-              position: relative;
-              display: flex;
-              align-items: flex-end;
-              padding: 10px;
-              color: white;
-              text-decoration: none;
-              overflow: hidden;
-            ">
-            <div style="
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background: rgba(0, 0, 0, 0.3);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-              ">
-              <img src="https://www.youtube.com/s/desktop/4f507b1a/img/favicon_32.png" alt="Play" style="width: 50px; height: 50px;" />
-            </div>
-            <h4 style="z-index: 1;">ANTHILL Official Trailer | Documentary Film | Susheel Agarwal</h4>
-          </a>
+          <div class="thumb" style="height:220px; overflow:hidden; border-radius:14px;">
+            <iframe width="100%" height="220" src="https://www.youtube.com/embed/vP71vc-ZdrI?enablejsapi=1&modestbranding=1&rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         </div>
       </div>
     </section>
 
-    <!-- WORK pane (kept separate — non-video case studies) -->
     <section id="work-pane" class="tab-pane" aria-labelledby="work">
       <div class="center">
         <h3 class="section-heading">Selected Work</h3>
@@ -398,7 +223,6 @@
       </div>
     </section>
 
-    <!-- ABOUT pane -->
     <section id="about-pane" class="tab-pane" aria-labelledby="about">
       <div class="center">
         <h3 class="section-heading">About Dimlight</h3>
@@ -413,7 +237,6 @@
       </div>
     </section>
 
-    <!-- CONTACT pane -->
     <section id="contact-pane" class="tab-pane" aria-labelledby="contact">
       <div class="center">
         <h3 class="section-heading">Get in Touch</h3>
@@ -432,7 +255,6 @@
     </section>
   </main>
 
-  <!-- footer -->
   <footer>
     <div class="wrap center">
       <div style="font-weight:800">Dimlight</div>
@@ -453,7 +275,6 @@
     </div>
   </footer>
 
-  <!-- inline script: handles tabs + small behaviors -->
   <script>
     // set year
     document.getElementById('year').textContent = new Date().getFullYear();
@@ -518,7 +339,6 @@
     activateTab('home');
   </script>
 
-  <!-- optional external script (kept for compatibility; safe to keep or remove) -->
   <script src="scripts.js"></script>
 </body>
 </html>
