--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <nav style="margin-top:12px">
         <a href="#" onclick="switchTo('home'); return false">Home</a> ·
         <a href="#" onclick="switchTo('services'); return false">Services</a> ·
-        <a href="#" onclick="switchTo('work'); return false">Work</a> ·
+        <a href="#" onclick="switchTo('portfolio'); return false">Work</a> ·
         <a href="#" onclick="switchTo('about'); return false">About</a> ·
         <a href="#" onclick="switchTo('contact'); return false">Contact</a>
       </nav>
