--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </div>
     </section>
 
-    <section id="work-pane" class="tab-pane" aria-labelledby="work">
+    <section id="portfolio-pane" class="tab-pane" aria-labelledby="portfolio">
       <div class="center">
         <h3 class="section-heading">Selected Work</h3>
         <p style="margin-top:10px; max-width:760px; margin-left:auto; margin-right:auto">Case studies showing our creative + growth approach.</p>
@@ -262,7 +262,7 @@
       <nav style="margin-top:12px">
         <a href="#" onclick="switchTo('home'); return false">Home</a> ·
         <a href="#" onclick="switchTo('services'); return false">Services</a> ·
-        <a href="#" onclick="switchTo('portfolio'); return false">Work</a> ·
+        <a href="#" onclick="switchTo('portfolio'); return false">portfolio</a> ·
         <a href="#" onclick="switchTo('about'); return false">About</a> ·
         <a href="#" onclick="switchTo('contact'); return false">Contact</a>
       </nav>
@@ -285,7 +285,7 @@
       home: document.getElementById('home-pane'),
       services: document.getElementById('services-pane'),
       portfolio: document.getElementById('portfolio-pane'),
-      work: document.getElementById('work-pane'),
+      work: document.getElementById('portfolio-pane'),
       about: document.getElementById('about-pane'),
       contact: document.getElementById('contact-pane')
     };
