--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 </div></div>
     </section>
 
-    <section id="portfolio-pane" class="tab-pane" aria-labelledby="portfolio">
+    <section id="work-pane" class="tab-pane" aria-labelledby="work">
       <h1> Our Works</h1>
       <div class="section">
         <div class="container grid portfolio-grid" style="
