--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       </div>
     </section>
 
-    <section id="portfolio-pane" class="tab-pane" aria-labelledby="portfolio">
+    <section id="work-pane" class="tab-pane" aria-labelledby="work">
       <div class="center">
         <h3 class="section-heading">Selected Work</h3>
         <p style="margin-top:10px; max-width:760px; margin-left:auto; margin-right:auto">Case studies showing our creative + growth approach.</p>
