--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section id="work-pane" class="tab-pane" aria-labelledby="work">
       <h1> Our Works</h1>
       <div class="section">
-        <div class="container grid portfolio-grid" style="
+        <div class="container grid work-grid" style="
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
