--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 </div></div>
     </section>
 
-    <section id="work-pane" class="tab-pane" aria-labelledby="work">
+    <section id="portfolio-pane" class="tab-pane" aria-labelledby="portfolio">
       <h1> Our Works</h1>
       <div class="section">
-        <div class="container grid work-grid" style="
+        <div class="container grid portfolio-grid" style="
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 20px;
@@ -262,7 +262,7 @@
       <nav style="margin-top:12px">
         <a href="#" onclick="switchTo('home'); return false">Home</a> ·
         <a href="#" onclick="switchTo('services'); return false">Services</a> ·
-        <a href="#" onclick="switchTo('portfolio'); return false">portfolio</a> ·
+        <a href="#" onclick="switchTo('work'); return false">Work</a> ·
         <a href="#" onclick="switchTo('about'); return false">About</a> ·
         <a href="#" onclick="switchTo('contact'); return false">Contact</a>
       </nav>
@@ -285,7 +285,7 @@
       home: document.getElementById('home-pane'),
       services: document.getElementById('services-pane'),
       portfolio: document.getElementById('portfolio-pane'),
-      work: document.getElementById('portfolio-pane'),
+      work: document.getElementById('work-pane'),
       about: document.getElementById('about-pane'),
       contact: document.getElementById('contact-pane')
     };
