--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
         <a href="#" onclick="switchTo('home'); return false">Home</a> ·
         <a href="#" onclick="switchTo('services'); return false">Services</a> ·
         <a href="#" onclick="switchTo('work'); return false">Work</a> ·
+        <a href="#" onclick="switchTo('portfolio'); return false">Work</a> ·
         <a href="#" onclick="switchTo('about'); return false">About</a> ·
         <a href="#" onclick="switchTo('contact'); return false">Contact</a>
       </nav>
