--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles.css">
-  <!-- Small local styles to make the About block match the screenshot -->
+  <!-- Scoped About styles -->
   <style>
     /* Scoped About styles */
     .about-hero {
@@ -110,7 +110,7 @@
             <div style="font-size:14px;color:var(--muted)">Trusted by brands & storytellers</div>
           </div>
 
-          </div>
+        </div>
 
         <div class="hero-media" aria-hidden="false">
           <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?auto=format&fit=crop&w=1400&q=60" alt="Hero visual">
@@ -154,19 +154,10 @@
         </div>
       </section>
 
-      <section class="center" style="padding-top:24px;padding-bottom:24px">
-        <h3 class="section-heading">About Dimlight</h3>
-        <p style="margin-top:12px; max-width:780px; margin-left:auto; margin-right:auto">Founded by <strong>Ram Sardhar</strong> in Hyderabad, Dimlight is a creative studio combining cinematic storytelling with digital growth expertise. From short films to branded campaigns, our focus is always on emotion, craft and measurable impact.</p>
-      </section>
-
       <section style="padding-top:18px;padding-bottom:18px">
         <h3 class="section-heading left" style="margin-bottom:12px">What Our Clients Say</h3>
         <div class="marquee" id="marqueeWrap">
           <div class="marquee-track" id="marqueeTrack">
-            <div class="quote">“Dimlight delivered a film that changed how our customers see the brand.” — CMO, Retail</div>
-            <div class="quote">“Director-led craft with measurable growth outcomes. Rare combination.” — Head of Growth</div>
-            <div class="quote">“Beautiful visuals, excellent sound design and on-time delivery.” — Creative Lead</div>
-            <div class="quote">“They scaled our content engine and kept brand quality intact.” — Founder, D2C</div>
             <div class="quote">“Dimlight delivered a film that changed how our customers see the brand.” — CMO, Retail</div>
             <div class="quote">“Director-led craft with measurable growth outcomes. Rare combination.” — Head of Growth</div>
             <div class="quote">“Beautiful visuals, excellent sound design and on-time delivery.” — Creative Lead</div>
@@ -286,9 +277,7 @@
       </div>
     </section>
 
-    <!-- =========================
-         UPDATED ABOUT BLOCK (replaces previous ABOUT / hero)
-         ========================= -->
+    <!-- ABOUT: only here -->
     <section id="about-pane" class="tab-pane" aria-labelledby="about">
       <div class="about-hero" role="region" aria-labelledby="about-hero-title">
         <div>
@@ -315,7 +304,6 @@
         </div>
       </div>
 
-      <!-- Two rounded information cards like the screenshot -->
       <div class="about-cards">
         <div class="about-card">
           <h4>Our Journey</h4>
@@ -329,7 +317,6 @@
         </div>
       </div>
 
-      <!-- Compact mission/values row (kept short) -->
       <div style="display:flex; gap:14px; margin-top:20px; flex-wrap:wrap;">
         <div class="stat-card" style="flex:1; min-width:180px; padding:14px; border-radius:10px;">
           <strong style="display:block; font-weight:700">Mission</strong>
@@ -375,7 +362,6 @@
         </div>
       </div>
 
-      <!-- TEAM GALLERY (row) -->
       <div class="gallery row" role="list">
         <div class="team-member" role="listitem">
           <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Emily Chen, Lead Strategist">
