--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
         </div>
       </section>
 
+      <section class="center" style="padding-top:24px;padding-bottom:24px">
+        <h3 class="section-heading">About Dimlight</h3>
+        <p style="margin-top:12px; max-width:780px; margin-left:auto; margin-right:auto">Founded by <strong>Ram Sardhar</strong> in Hyderabad, Dimlight is a creative studio combining cinematic storytelling with digital growth expertise. From short films to branded campaigns, our focus is always on emotion, craft and measurable impact.</p>
+      </section>
+
       <section style="padding-top:18px;padding-bottom:18px">
         <h3 class="section-heading left" style="margin-bottom:12px">What Our Clients Say</h3>
         <div class="marquee" id="marqueeWrap">
@@ -277,7 +282,7 @@
       </div>
     </section>
 
-    <!-- ABOUT: only here -->
+    <!-- ABOUT: only here - includes Values & Team inside the About tab -->
     <section id="about-pane" class="tab-pane" aria-labelledby="about">
       <div class="about-hero" role="region" aria-labelledby="about-hero-title">
         <div>
@@ -331,54 +336,56 @@
           <div style="color:var(--muted); margin-top:6px">Craft • Speed • Honesty • Results</div>
         </div>
       </div>
-    </section>
 
-    <!-- VALUES (simple grid) -->
-    <section class="values" aria-labelledby="values-title">
-      <h2 id="values-title">Our Core Values</h2>
-      <div class="value-card card" role="listitem">
-        <h3>Visionary Creativity</h3>
-        <p class="muted">We don't just solve problems; we invent new ways of seeing the world. Our solutions blend creative courage with strategic clarity.</p>
-      </div>
-      <div class="value-card card" role="listitem">
-        <h3>Strategic Impact</h3>
-        <p class="muted">Every creative choice is tied to a measurable business outcome. Our work is designed to move your brand forward, not just look good.</p>
-      </div>
-      <div class="value-card card" role="listitem">
-        <h3>Collaborative Spirit</h3>
-        <p class="muted">Your vision is our blueprint. We work as a unified team with our clients to co-create campaigns that feel truly authentic and shared.</p>
-      </div>
-    </section>
+      <!-- Core Values (only inside About) -->
+      <section class="values" aria-labelledby="values-title" style="margin-top:28px;">
+        <h2 id="values-title">Our Core Values</h2>
+        <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:14px; margin-top:14px;">
+          <div class="value-card card" role="listitem">
+            <h3>Visionary Creativity</h3>
+            <p class="muted">We don't just solve problems; we invent new ways of seeing the world. Our solutions blend creative courage with strategic clarity.</p>
+          </div>
+          <div class="value-card card" role="listitem">
+            <h3>Strategic Impact</h3>
+            <p class="muted">Every creative choice is tied to a measurable business outcome. Our work is designed to move your brand forward, not just look good.</p>
+          </div>
+          <div class="value-card card" role="listitem">
+            <h3>Collaborative Spirit</h3>
+            <p class="muted">Your vision is our blueprint. We work as a unified team with our clients to co-create campaigns that feel truly authentic and shared.</p>
+          </div>
+        </div>
+      </section>
 
-    <!-- TEAM (with founder) -->
-    <section class="team" aria-labelledby="team-title">
-      <h2 id="team-title">Meet Our Team</h2>
-      <div class="founder split" role="region" aria-labelledby="founder-title">
-        <img src="https://images.unsplash.com/photo-1552058544-f2b084c22140?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Portrait of Alex Johnson, Dimlight's founder">
-        <div class="text">
-          <div class="kicker">FOUNDER & CREATIVE DIRECTOR</div>
-          <h3 id="founder-title">Alex Johnson</h3>
-          <p class="muted">Alex is the visionary behind Dimlight, blending his deep expertise in film production with a passion for brand strategy. He guides our team with a hands-on approach, ensuring every project is executed with precision and a narrative-first perspective.</p>
+      <!-- Team (only inside About) -->
+      <section class="team" aria-labelledby="team-title" style="margin-top:28px;">
+        <h2 id="team-title">Meet Our Team</h2>
+        <div class="founder split" role="region" aria-labelledby="founder-title" style="display:flex; gap:18px; align-items:center; margin-top:12px;">
+          <img src="https://images.unsplash.com/photo-1552058544-f2b084c22140?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Portrait of Alex Johnson, Dimlight's founder" style="width:200px; border-radius:12px;">
+          <div class="text">
+            <div class="kicker">FOUNDER & CREATIVE DIRECTOR</div>
+            <h3 id="founder-title">Alex Johnson</h3>
+            <p class="muted">Alex is the visionary behind Dimlight, blending his deep expertise in film production with a passion for brand strategy. He guides our team with a hands-on approach, ensuring every project is executed with precision and a narrative-first perspective.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="gallery row" role="list">
-        <div class="team-member" role="listitem">
-          <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Emily Chen, Lead Strategist">
-          <h4>Emily Chen</h4>
-          <p class="muted">Lead Strategist</p>
+        <div class="gallery row" role="list" style="display:grid; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); gap:12px; margin-top:18px;">
+          <div class="team-member" role="listitem" style="text-align:center;">
+            <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Emily Chen, Lead Strategist" style="width:100%; height:140px; object-fit:cover; border-radius:10px;">
+            <h4>Emily Chen</h4>
+            <p class="muted">Lead Strategist</p>
+          </div>
+          <div class="team-member" role="listitem" style="text-align:center;">
+            <img src="https://images.unsplash.com/photo-1544723795-3fb6469f2b87?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Michael Davis, Head of Production" style="width:100%; height:140px; object-fit:cover; border-radius:10px;">
+            <h4>Michael Davis</h4>
+            <p class="muted">Head of Production</p>
+          </div>
+          <div class="team-member" role="listitem" style="text-align:center;">
+            <img src="https://images.unsplash.com/photo-1627164746618-9366d3a68297?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sarah Lee, Senior Editor" style="width:100%; height:140px; object-fit:cover; border-radius:10px;">
+            <h4>Sarah Lee</h4>
+            <p class="muted">Senior Editor</p>
+          </div>
         </div>
-        <div class="team-member" role="listitem">
-          <img src="https://images.unsplash.com/photo-1544723795-3fb6469f2b87?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Michael Davis, Head of Production">
-          <h4>Michael Davis</h4>
-          <p class="muted">Head of Production</p>
-        </div>
-        <div class="team-member" role="listitem">
-          <img src="https://images.unsplash.com/photo-1627164746618-9366d3a68297?q=80&w=600&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder" alt="Sarah Lee, Senior Editor">
-          <h4>Sarah Lee</h4>
-          <p class="muted">Senior Editor</p>
-        </div>
-      </div>
+      </section>
     </section>
 
     <section id="contact-pane" class="tab-pane" aria-labelledby="contact">
